Refactor: NoticeFile API